src/gui/painting/qpaintdevice.cpp
@@ -17,6 +17,39 @@ QPaintDevice::~QPaintDevice()
                   "painted");
 }
 
+/*!
+    \internal
+*/
+// ### Qt 7: Replace this workaround mechanism: virtual devicePixelRatio() and virtual metricF()
+inline double QPaintDevice::getDecodedMetricF(PaintDeviceMetric metricA, PaintDeviceMetric metricB) const
+{
+    qint32 buf[2];
+    // The Encoded metric enum values come in pairs of one odd and one even value.
+    // We map those to the 0 and 1 indexes of buf by taking just the least significant bit.
+    // Same mapping here as in the encodeMetricF() function, to ensure correct order.
+    buf[metricA & 1] = metric(metricA);
+    buf[metricB & 1] = metric(metricB);
+    double res;
+    memcpy(&res, buf, sizeof(res));
+    return res;
+}
+
+qreal QPaintDevice::devicePixelRatio() const
+{
+    Q_STATIC_ASSERT((PdmDevicePixelRatioF_EncodedA & 1) != (PdmDevicePixelRatioF_EncodedB & 1));
+    double res;
+    int scaledDpr = metric(PdmDevicePixelRatioScaled);
+    if (scaledDpr == int(devicePixelRatioFScale())) {
+        res = 1; // Shortcut for common case
+    } else if (scaledDpr == 2 * int(devicePixelRatioFScale())) {
+        res = 2; // Shortcut for common case
+    } else {
+        res = getDecodedMetricF(PdmDevicePixelRatioF_EncodedA, PdmDevicePixelRatioF_EncodedB);
+        if (res <= 0) // These metrics not implemented, fall back to PdmDevicePixelRatioScaled
+            res = scaledDpr / devicePixelRatioFScale();
+    }
+    return res;
+}
 
 /*!
     \internal
@@ -64,6 +97,8 @@ int QPaintDevice::metric(PaintDeviceMetric m) const
         return 256;
     } else if (m == PdmDevicePixelRatio) {
         return 1;
+    } else if (m == PdmDevicePixelRatioF_EncodedA || m == PdmDevicePixelRatioF_EncodedB) {
+        return 0;
     } else {
         qDebug("Unrecognised metric %d!",m);
         return 0;
